// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`structured-data > builds a representative blog posting schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "BlogPosting",
  "author": {
    "@type": "Person",
    "name": "aidenlx",
    "url": "https://github.com/aidenlx",
  },
  "datePublished": "2026-01-02T00:00:00.000Z",
  "description": "How ZotLit came to be.",
  "headline": "Building ZotLit",
  "publisher": {
    "@type": "Organization",
    "logo": "https://zotlit.aidenlx.site/logo/zotlit-logo-512.png",
    "name": "ZotLit",
    "sameAs": [
      "https://github.com/aidenlx/zotlit",
      "https://community.obsidian.md/plugins/zotlit",
    ],
    "url": "https://zotlit.aidenlx.site",
  },
  "url": "https://zotlit.aidenlx.site/blog/building-zotlit",
}
`;

exports[`structured-data > builds a representative breadcrumb list schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "item": "https://zotlit.aidenlx.site/",
      "name": "ZotLit",
      "position": 1,
    },
    {
      "@type": "ListItem",
      "item": "https://zotlit.aidenlx.site/blog",
      "name": "Blog",
      "position": 2,
    },
    {
      "@type": "ListItem",
      "item": "https://zotlit.aidenlx.site/blog/building-zotlit",
      "name": "Building ZotLit",
      "position": 3,
    },
  ],
}
`;

exports[`structured-data > builds a representative changelog article schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Article",
  "datePublished": "2026-01-02T00:00:00.000Z",
  "headline": "ZotLit v1.2.3",
  "publisher": {
    "@type": "Organization",
    "logo": "https://zotlit.aidenlx.site/logo/zotlit-logo-512.png",
    "name": "ZotLit",
    "sameAs": [
      "https://github.com/aidenlx/zotlit",
      "https://community.obsidian.md/plugins/zotlit",
    ],
    "url": "https://zotlit.aidenlx.site",
  },
  "url": "https://zotlit.aidenlx.site/changelog/1.2.3",
}
`;

exports[`structured-data > builds the organization schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Organization",
  "logo": "https://zotlit.aidenlx.site/logo/zotlit-logo-512.png",
  "name": "ZotLit",
  "sameAs": [
    "https://github.com/aidenlx/zotlit",
    "https://community.obsidian.md/plugins/zotlit",
  ],
  "url": "https://zotlit.aidenlx.site",
}
`;

exports[`structured-data > builds the software application schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "SoftwareApplication",
  "applicationCategory": "ReferenceApplication",
  "name": "ZotLit",
  "offers": {
    "@type": "Offer",
    "price": 0,
    "priceCurrency": "USD",
  },
  "operatingSystem": "Windows, macOS, Linux",
}
`;

exports[`structured-data > builds the website schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "WebSite",
  "name": "ZotLit",
  "url": "https://zotlit.aidenlx.site",
}
`;
